@@ -2,6 +2,8 @@ CHANGES in VERSION 1.9.5
 
 * add a section in the vignette to show how to adjust positions
   of column names when there are bottom annotations.
+* fixed a bug that character NA values can not to assigned with na_col
+* extra character 'at' and 'labels' in legends will be removed automatically
 
 =============================
 
